Day 21. Fixed a little bit of the styling of the app, but most of the work that I did today was playing around with the context api hooks so that I can wrap my mind around them and use them for my projects. I did that in another repo, which is a react sandbox that I use for playing around.

--- a/components/KriyaCommentsDisplay/styles.module.css
+++ b/components/KriyaCommentsDisplay/styles.module.css
@@ -10,6 +10,7 @@
 .commentContainer {
   margin: 8px auto;
   border: solid black 1px;
+  border-radius: 4px;
   padding: 4px;
   max-height: 200px;
   overflow-y: scroll;
