--- a/components/KriyaElementCard/styles.module.css
+++ b/components/KriyaElementCard/styles.module.css
@@ -4,6 +4,7 @@
   padding: 8px;
   margin: 4px 12px;
   background-color: beige;
+  width: 333px;
 }
 
 .kriyaElementDisplayContainer:hover {
