--- a/components/RecordingCard/styles.module.css
+++ b/components/RecordingCard/styles.module.css
@@ -4,4 +4,5 @@
   background-color: beige;
   cursor: pointer;
   margin: 8px;
+  width: 333px;
 }
